--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -13,6 +13,46 @@ body{
     background-image: url(../img/fondoN1.jpg);
 
 }
+nav{
+    border: 10px solid rgb(60, 189, 0);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: rgb(60, 189, 0);
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    font-size: 2em;
+    text-align: center;
+}
+nav ul{
+    display: grid;
+    list-style-type: none;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 30px;
+}
+
+nav ul li{
+    border: 5px solid rgb(60, 189, 0);
+    border-radius: 10px;
+    background-color: rgb(215, 255, 205);
+}
+nav ul a {
+    text-decoration: none;
+    color: black;
+}
+
+
+main {
+    border: 15px solid rgb(60, 189, 0);
+    border-radius: 20px;
+    background-color: rgb(215, 255, 205);
+    width: 100%;
+
+    overflow: hidden;
+    position: relative;
+    top: 20px;
+    text-align: center;
+}
 
 main{
     border: 10px solid rgb(60, 189, 0);
@@ -43,4 +83,8 @@ main ul li{
 main ul a {
     text-decoration: none;
     color: black; 
+}
+main input{
+    border-radius: 10px;
+    padding: 5px;
 }
